<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".events.AddEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/buttonBackToEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_left"
                app:tint="@color/black" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create  Event"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventLocation"
                android:layout_marginTop="15dp"
                android:text="Event Title"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/no_rounded_corners"
                android:hint="Event Title"
                android:inputType="text"
                android:padding="10dip"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventLocation"
                android:layout_marginTop="10dp"
                android:text="Event Decription"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eventDsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/no_rounded_corners"
                android:hint="Event Description"
                android:inputType="text"
                android:padding="10dip"
                tools:ignore="TextFields" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventLocation"
                android:layout_marginTop="10dp"
                android:text="Event Location"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/no_rounded_corners"
                android:hint="Event Location"
                android:inputType="text"
                android:padding="10dip"
                tools:ignore="TextFields" />


            <TextView
                android:id="@+id/startDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventTitle"
                android:layout_marginTop="10dp"
                android:text="Start Date and Time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/startDateLabel"
                android:layout_marginTop="5dp"
                android:background="@drawable/no_rounded_corners"
                android:clickable="true"
                android:focusable="false"
                android:hint="Select Start Date and Time"
                android:onClick="showStartDatePicker"
                android:padding="15dp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/startDate"
                android:layout_marginTop="10dp"
                android:text="End Date and Time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/no_rounded_corners"
                android:clickable="true"
                android:focusable="false"
                android:hint="Select End Date and Time"
                android:onClick="showEndDatePicker"
                android:padding="15dp"
                tools:ignore="TextFields" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/startDate"
                android:layout_marginTop="10dp"
                android:text="Event Image"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageViewEventPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher_foreground" />

            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewEventPoster"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="Pick Image" />


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="CREATE EVENT" />

        </LinearLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>
